--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@
 www/httpdocs/install-log.txt
 www/httpdocs/_docs/*
 www/httpdocs/manifest/*
-www/httpdocs/themes/active/css/*
+www/httpdocs/themes/active/css
 www/httpdocs/workspace/uploads/*
